feat: 初始化 list server
