# api/configure/server/openapi.yaml
@@ -10,6 +10,7 @@ paths:
         post:
             tags:
                 - Server
+            description: CreateServer 创建服务
             operationId: Server_CreateServer
             requestBody:
                 content:
@@ -24,6 +25,50 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/configure.api.configure.server.v1.CreateServerReply'
+    /configure/api/v1/servers:
+        get:
+            tags:
+                - Server
+            description: ListServer 获取服务信息列表
+            operationId: Server_ListServer
+            parameters:
+                - name: page
+                  in: query
+                  schema:
+                    type: integer
+                    format: uint32
+                - name: pageSize
+                  in: query
+                  schema:
+                    type: integer
+                    format: uint32
+                - name: order
+                  in: query
+                  schema:
+                    type: string
+                - name: orderBy
+                  in: query
+                  schema:
+                    type: string
+                - name: keyword
+                  in: query
+                  schema:
+                    type: string
+                - name: name
+                  in: query
+                  schema:
+                    type: string
+                - name: status
+                  in: query
+                  schema:
+                    type: boolean
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/configure.api.configure.server.v1.ListServerReply'
 components:
     schemas:
         configure.api.configure.server.v1.CreateServerReply:
@@ -43,5 +88,35 @@ components:
                     type: string
                 status:
                     type: boolean
+        configure.api.configure.server.v1.ListServerReply:
+            type: object
+            properties:
+                total:
+                    type: integer
+                    format: uint32
+                list:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/configure.api.configure.server.v1.ListServerReply_Server'
+        configure.api.configure.server.v1.ListServerReply_Server:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: uint32
+                keyword:
+                    type: string
+                name:
+                    type: string
+                description:
+                    type: string
+                status:
+                    type: boolean
+                createdAt:
+                    type: integer
+                    format: uint32
+                updatedAt:
+                    type: integer
+                    format: uint32
 tags:
     - name: Server
